# sig-cloud-control

./: .gitignore  CHANGELOG.md  GEMINI.md  Justfile  LICENSE  README.md  config.sample.toml  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: client.py  models.py
src/sig_cloud_control/: __init__.py  _encryption.py  client.py  models.py
src/sig_cloud_control/cli_app/: __init__.py  actions.py  config.py  constants.py  main.py  setup.py
src/sig_cloud_control/client/: __init__.py  cache.py  core.py  exceptions.py
src/sig_control/: client.py
src/sig_control/cli_app/: __init__.py
tests/: test_cli.py  test_client.py  test_config_loading.py  test_meta.py  test_models.py  test_show_config.py  test_station_id.py
