[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sig-cloud-control"
version = "0.1.0"
description = "Control Sigenergy battery via Sigen Cloud"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Mike Lawther", email = "mike.lawther@gmail.com" }]
keywords = ["sigenergy", "sigen", "battery", "solar", "energy-storage", "iot"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Home Automation",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "cryptography~=46.0",
  "httpx~=0.28",
  "platformdirs>=4.0",
  "pydantic-settings>=2.14.0",
  "pydantic[email]~=2.12",
  "tomli-w>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/lawther/sig-cloud-control"
Repository = "https://github.com/lawther/sig-cloud-control"
Issues = "https://github.com/lawther/sig-cloud-control/issues"

[project.optional-dependencies]
cli = ["tomli-w>=1.2.0", "typer~=0.24"]

[project.scripts]
sig-cloud-control = "sig_cloud_control.cli_app:app"

[dependency-groups]
dev = ["pytest~=9.0", "pytest-asyncio~=1.3", "ruff~=0.15", "typer~=0.24"]

[tool.hatch.build.targets.wheel]
packages = ["src/sig_cloud_control"]

[tool.ruff]
line-length = 120
# these are explanation of the rules that are selected:
# B: Basic checks
# C4: Code complexity checks
# D: Docstring checks
# E: Error checks
# F: Formatting checks
# I: Import checks
# ICN: Import convention checks
# PGH: Python grammar checks
# PL: Pylint checks
# RUF: Ruff checks
# UP: Unused code checks
# ANN: Type annotation checks
# ASYNC: Async code checks
# SIM: Simple checks
# LOG: Logging checks
# S: Bandit checks

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "D",
  "E",
  "F",
  "I",
  "S",
  "ICN",
  "PGH",
  "PL",
  "RUF",
  "UP",
  "ANN",
  "ASYNC",
  "SIM",
  "LOG",
]
ignore = [
  # pydocstyle
  # D1: Missing docstring in public module
  "D100",
  # D2: Missing docstring in public package
  "D104",
  # D3: Missing docstring in public function
  "D103",
  # D4: Missing docstring in public package
  "D107",
  # D5: Missing docstring in public method
  "D102",
  # D6: Missing docstring in public class
  "D101",
  # D7: Missing docstring in __init__
  "D107",
  # pylint
  # PLR09: Too many <...>
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
per-file-ignores = { "tests/*" = [
  # S101: Use of assert (Standard in tests)
  "S101",
  # S105: Hardcoded password strings (Allowed in tests for dummy data)
  "S105",
  # S106: Hardcoded password in function arguments (Allowed in tests for dummy data)
  "S106",
] }

[tool.ruff.lint.pydocstyle]
convention = "google"
