[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sig-cloud-control"
version = "0.5.0"
description = "Control Sigenergy battery via Sigen Cloud"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Mike Lawther", email = "mike.lawther@gmail.com" }]
keywords = ["sigenergy", "sigen", "battery", "solar", "energy-storage", "iot"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Home Automation",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "cryptography~=46.0",
  "httpx~=0.28",
  "platformdirs>=4.0",
  "pydantic-settings>=2.14.0",
  "pydantic[email]~=2.12",
  "tomli-w>=1.2.0",
  "typer~=0.24",
]

[project.urls]
Homepage = "https://github.com/lawther/sig-cloud-control"
Repository = "https://github.com/lawther/sig-cloud-control"
Issues = "https://github.com/lawther/sig-cloud-control/issues"

[project.scripts]
sig-cloud-control = "sig_cloud_control.cli_app:app"

[dependency-groups]
dev = [
  "pytest~=9.0",
  "pytest-asyncio~=1.3",
  "pytest-cov>=7.1.0",
  "python-lint-hooks",
  "ruff~=0.15",
  "ty~=0.0.32",
]

[tool.uv.sources]
python-lint-hooks = { git = "https://github.com/lawther/python-lint-hooks", tag = "v0.7.7" }

[tool.hatch.build.targets.wheel]
packages = ["src/sig_cloud_control"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sig_cloud_control --cov-report=term-missing --cov-branch"

[tool.coverage.run]
branch = true
source = ["sig_cloud_control"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "def __repr__",
  "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
# these are explanation of the rules that are selected:
# B: Basic checks
# C4: Code complexity checks
# D: Docstring checks
# E: Error checks
# F: Formatting checks
# I: Import checks
# ICN: Import convention checks
# PGH: Python grammar checks
# PL: Pylint checks
# RUF: Ruff checks
# UP: Unused code checks
# ANN: Type annotation checks
# ASYNC: Async code checks
# SIM: Simple checks
# LOG: Logging checks
# S: Bandit checks

[tool.ruff.lint]
external = ["ML"]
select = [
  "B",
  "C4",
  "D",
  "E",
  "F",
  "I",
  "S",
  "ICN",
  "PGH",
  "PL",
  "RUF",
  "UP",
  "ANN",
  "ASYNC",
  "SIM",
  "LOG",
  "DTZ",
  "S",
]
ignore = [
  "D100",  # missing docstring in public module
  "D101",  # missing docstring in public class
  "D102",  # missing docstring in public method
  "D103",  # missing docstring in public function
  "D104",  # missing docstring in public package
  "D105",  # missing docstring in magic method
  "D107",  # missing docstring in __init__
  "PLR0912",  # too many branches
  "PLR0913",  # too many arguments
  "PLR0915",  # too many statements
]
per-file-ignores = { "tests/*" = [
  # S101: Use of assert (Standard in tests)
  "S101",
  # S105: Hardcoded password strings (Allowed in tests for dummy data)
  "S105",
  # S106: Hardcoded password in function arguments (Allowed in tests for dummy data)
  "S106",
], "scripts/*" = ["S603", "S607"] }

[tool.ruff.lint.pydocstyle]
convention = "google"
